WebApiExRateProvider 리팩토링